spacing issue in navbar

--- a/app/static/sass/static.scss
+++ b/app/static/sass/static.scss
@@ -50,7 +50,10 @@
 
 .navbar-brand-text {
     vertical-align: -0.25;
+}
 
+.nav-item {
+    margin-top: 0;
 }
 
 // for the top page of Ringing Room
